- drakx-net:
  o recognize r8723bs (mga#15874)
- diskdrake:
  o do not set noauto for /boot/EFI (mga#15627)
- harddrake:
  o fix detecting AHCI as SATA (mga#9992)
  o fix detecting some memory chips (mga#5810)
  o fix not listing uvccideo managed devices as wecams (mga#9992)

Version 16.90 - 28 April 2015

- localedrake:
  o write input methods to /etc/locale.conf (mga#15464)
- run vgchange before updating the list of LVMs, not after, and even if not
  in install (should help with mga#7578).

Version 16.89 - 25 April 2015

- Ignore special partitions on mmc (mga#15759)

Version 16.88 - 25 April 2015

- ensure country/timezone locale is kept when removing unused locale
  packages (mga#3723)

Version 16.87 - 22 April 2015

- partitioning_wizard:
  o improve the display box (mga#15728)

Version 16.86 - 20 April 2015

- bootloader:
  o dont override 'splash' and/or 'quiet' when adding 'noiswmd' (mga#15666)
- partitioning_wizard:
  o use the windows partition with the most available space on current
    disk, not the last one across all disks (mga#15589)
  o suggest up to 20GB/20% of the windows partition (whichever is larger),
    previously 6GB/10% (mga#15589)
  o hide empty space < 2MB, we have such holes due to alignment (mga#15733)
- ugtk2, ugtk3, harddrake2:
  o do not "restore" mouse cursor on the root window, we haven't set it to
    'wait' since 2005 and this causes a crash if we don't own it (mga#15729).
- speed up reading of flags from GPT partition table (mga#15621).

Version 16.85 - 15 April 2015

- reuse ESP with "use free space" in live (mga#15690)

Version 16.84 - 14 April 2015

- drakboot:
  o fix kernel booting in blind mode (mga#15291)

Version 16.82 - 13 April 2015

- diskdrake:
  o detect Lenovo recovery & 'SYSTEM_DRV' as such (mga#1371)
  o do add a ESP if it was removed by "Clear All"
  o ignore ESP for "use free space on MS"
- drakboot:
  o default to GRUB_DISABLE_RECOVERY=falss for 'failsafe' entry (mga#15675)

Version 16.81 - 12 April 2015
