@@ -1,3 +1,5 @@
+- bootloader:
+  o backup grub2 files before configuring
 - always log update-grub2 output (mga#15857)
 - networking:
   o recognize r8723bs (mga#15874)
