@@ -2,6 +2,8 @@
   o recognize r8723bs (mga#15874)
 - diskdrake:
   o do not set noauto for /boot/EFI (mga#15627)
+- drakboot:
+  o backup grub2 files before configuring
 - harddrake:
   o fix detecting AHCI as SATA (mga#9992)
   o fix detecting some memory chips (mga#5810)
